--- a/index.html
+++ b/index.html
@@ -1,39 +1,143 @@
 <!DOCTYPE html>
-<html class="no-js">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Test for IS117</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-
-        <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
-
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
-        <script src="js/vendor/modernizr-2.7.1.min.js"></script>
-    </head>
-    <body>
-        <!--[if lt IE 8]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-
-        <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
-
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X');ga('send','pageview');
-        </script>
-    </body>
+<html>
+<head>
+	<link rel="stylesheet" type="text/css" href="../is117/css/main.css">
+	<title>IS 117 Website</title>
+</head>
+<body>
+	<div id="wrapper"> 
+			<img src="img\empire.png" alt="empire">
+			<img src="img\facebooklogo.png" alt="facebooklogo" align="right">
+			<div id="contact"><span id="text" align="right">Available 7 days a week<br><b>CALL US TODAY 1-800-555-5555</b></br></span></div>
+			<img src="img\bbb.png" alt="bbb" align="right">
+				
+			
+		</div>	
+			
+		<div id="primary_links" align="center">
+		<!-- <img src="img\greenRectangle.png" alt="greenRectangle">	-->
+			<ul>
+				<li><a href="#">SERVICES</a></li>
+				<li><a href="#cooling">COOLING</a></li>
+				<li><a href="#heatng">HEATING</a></li>
+				<li><a href="#">ABOUT</a></li>
+				<li class="last"><a href="#">CONTACT</a></li>
+			</ul>
+		</div>
+		<div id="center_fold" align="center">
+			<h1>Call us now for an estimate at 1-800-555-5555</h1>
+			<p>We're dedicated to making sure yout family or business is as confortable as possible.</p>
+			<h5>SERVING CLIFTON AND ALL OF NORTHERN NEW JERSEY</h5>
+			
+			<iframe width="555" height="280"
+				src="http://www.youtube.com/embed/XGSy3_Czz8k">
+			</iframe>
+		</div>
+			<div id="fB" align="center">
+			<p>Like us on Facebook for our current offers and deals!</p>
+			</div>
+			<div id="welcome_to_empire">
+				<h3>WELCOME: TO EMPIRE HEATING & COOLING</h3>
+				<p align="left">Whether you need to repair, replace, ugrade or even add a new system, our<br>
+					products are designed to make you more comfortable. We have the knowledge<br>
+					and expertise to help you choose the right heating and air conditioning system<br>
+					to meet your needs so that you benefit from increased efficency, reliability,<br>
+					and control of your home or business' indoor enviroment.</p>
+					<ul>
+						<li>Full Insured / Owner Operated</li>
+						<li>Trained and experienced engineers, technicians and and installers</li>
+						<li>Trouble-free installation and service calls</li>
+						<li>TQM: Total Quality Program</li>
+						<li>Exceptional customer service from start to finish</li>
+						<li>Service and preventative maintenance contracts</li>
+					</ul>
+				</div>
+				<div id="table">
+					<table style="width:300px">
+						<tr>
+							<td rowspan="7" id="blue">
+								<div id="blue_pos" class="rotate">AIR CONDITIONING</div>
+							</td>
+  							<th>RESIDENTIAL</th>
+  							<th>COMERCIAL</th>
+ 							<th>INDUSTRIAL</th>
+						</tr>
+						<tr>
+  							<td>FG</td>
+  							<td>Jackson</td> 
+  							<td>94</td>
+						</tr>
+						<tr>
+  							<td>FG</td>
+  							<td>Jackson</td> 
+  							<td>94</td>
+						</tr>
+					</table>
+				</div>
+				<div id="heating" align="center">
+					<h2 align="center">HEATING</h2>
+					<p align="center">Our gial is to keep you warm and comfortable through the winter months.
+						We know which prosucts and systems will work best for you.<br>Our recomendations will always keep
+						your requirements and budget in mind. We'll respond to your requests and act quicly when you call.
+						<br> Nothing is more important than your peace of mind when the weather is cold.</p>
+						<img src="img\Heating1.png" alt="Heating1" align="center">
+						<img src="img\Heating2.png" alt="Heating2" align="center">
+						<img src="img\Heating3.png" alt="Heating3" align="center">
+					</div>
+					
+				<div id="cooling" align="center">
+					<h2>COOLING</h2>
+					<p>Central air conditioning helps your enviroment cool and reduces humidity levels.
+						As the central air conditioning draws air out<br>of various rooms in your house or business through
+						return air ducts, the air is pulled through an air filter, which removed airbone particles<br> 
+						such as dust and lint. The filteres air is then routed to air supply ductwork that carries it back to the rooms.</p>
+						<img src="img\cooling1.png" alt="cooling1" align="center">
+						<img src="img\cooling2.png" alt="cooling2" align="center">
+						<img src="img\cooling3.png" alt="cooling3" align="center">
+				</div>
+				<div id="about_us" align="center">
+					<h2>About Us</h2>
+					<p>Our goal is to keep you warm and comfortable through the winter onths. We know which products and systems will work best for you.<br>
+						Our recomendations will always keep your requirements and budget in mind. We'll respond to your requests and act quickly when you call.<br>
+						Nothing is more important than your peace of mind when the weather is cold.</p>
+						<span id="pict1">
+							<img src="img\AOsmith.png" alt="AOsmith" alt="1">
+							<img src="img\fujitsu.png" alt="fujitsu" alt="2">
+							<img src="img\w_rodgers.png" alt="w_rodgers" alt="3">
+							<img src="img\utica.png" alt="utica" alt="4">
+							<img src="img\taco.png" alt="taco" alt="5">
+							<img src="img\bryant.png" alt="bryant" alt="6">
+							<img src="img\mitsu.png" alt="mitsu" alt="7">
+						</span>
+						<br>
+						<span id="pict2">
+							<img src="img\peerless.png" alt="peerless" alt="8">
+							<img src="img\goodman.png" alt="goodman" alt="9">
+							<img src="img\crown.png" alt="crown" alt="10">
+							<img src="img\ruud.png" alt="ruud" alt="11">
+							<img src="img\rheem.png" alt="rheem" alt="12">
+							<img src="img\trane.png" alt="trane" alt="13">
+							<img src="img\sanyo.png" alt="sanyo" alt="14">
+						</span>
+						<br>
+							<span id="pict3">
+							<img src="img\C_Burnham.png" alt="C_Burnham" alt="15">
+							<img src="img\lennox.png" alt="lennox" alt="16">
+							<img src="img\b_white.png" alt="b_white" alt="17">
+							<img src="img\well_mlain.png" alt="well_mlain" alt="18">
+							<img src="img\honeywell.png" alt="honeywell" alt="19">
+							<img src="img\york.png" alt="york" alt="20">
+							<img src="img\carrier.png" alt="carrier" alt="21">
+						</span>
+						<br>
+						<span id="pict4">
+							<img src="img\amana.png" alt="amana" alt="22">
+							<img src="img\luxaire.png" alt="luxaire" alt="23">
+							<img src="img\american_standard.png" alt="american_standard" alt="24">
+							<img src="img\car_empire.png" alt="car_empire" alt="25">
+						</span>
+				</div>
+	</div>
+</body>
 </html>
+
